--- a/WebsiteCKC/Views/Home/Index.cshtml
+++ b/WebsiteCKC/Views/Home/Index.cshtml
@@ -1,31 +1,125 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="page-header">
+    <h1>Welkom op de webpagina van CKC 5<small> Een getalenteerd team, waarbij de derde helft telt!</small></h1>
 </div>
-
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-lg-9">
+        <div class="row">
+            <div class="col-md-11" style="border-bottom: 1px solid #eee">
+                <h2>Laatste nieuws</h2>
+                @*<p class="news-item">
+                    <span class=" text-info">22-04-2014</span> - CKC versterkt zich met keeper.
+                    @Html.ActionLink("Lees meer!", "Latest", "News")
+                </p>
+                <p class="news-item">
+                    <span class=" text-info">22-04-2014</span> - CKC versterkt zich met keeper.
+                    @Html.ActionLink("Lees meer!", "Latest", "News")
+                </p>
+                <p class="news-item">
+                    <span class=" text-info">22-04-2014</span> - CKC versterkt zich met keeper.
+                    @Html.ActionLink("Lees meer!", "Latest", "News")
+                </p>*@
+                <p>@Html.ActionLink("Laatste nieuws", "Latest", "News", new { @class = "btn btn-default btn-sm" })</p>
+            </div>
+            <div class="col-md-6">
+                <h2>Laatste wedstrijd</h2>
+                <p class="text-success">14-03-2014</p>
+                <p>vvCKC 5 - SVS 4</p>
+                <p>Uitslag: 1 - 3</p>
+                <p>@Html.ActionLink("Toon gegevens", "Details", "Match", new { @class = "btn btn-default btn-sm" })</p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-lg-3" style="border-left: 1px solid #eee;">
+        <h2>Stand</h2>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Team</th>
+                    <th>G</th>
+                    <th>P</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>CKC 5</td>
+                    <td>16</td>
+                    <td>43</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>CVV-Mercurius 1</td>
+                    <td>43</td>
+                    <td>42</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Antibarbari 12</td>
+                    <td>43</td>
+                    <td>41</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>SVS 4</td>
+                    <td>43</td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>CKC 5</td>
+                    <td>43</td>
+                    <td>43</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>CVV-Mercurius 1</td>
+                    <td>43</td>
+                    <td>42</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Antibarbari 12</td>
+                    <td>43</td>
+                    <td>41</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>SVS 4</td>
+                    <td>43</td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>CKC 5</td>
+                    <td>43</td>
+                    <td>43</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>CVV-Mercurius 1</td>
+                    <td>43</td>
+                    <td>42</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Antibarbari 12</td>
+                    <td>43</td>
+                    <td>41</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>SVS 4</td>
+                    <td>43</td>
+                    <td>40</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p>@Html.ActionLink("Laatste stand", "Details", "Competition", new { @class = "btn btn-default btn-sm" })</p>
     </div>
 </div>
