Created the stats table page.

--- a/WebsiteCKC/Views/Home/Index.cshtml
+++ b/WebsiteCKC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="page-header">
-    <h1>Welkom op de webpagina van CKC 5<small> Een getalenteerd team, waarbij de derde helft telt!</small></h1>
+    <h1>Welkom op de webpagina van CKC 5</h1>
 </div>
 <div class="row">
     <div class="col-lg-9">
@@ -61,7 +61,7 @@
                 </tbody>
             </table>
 
-            <p>@Html.ActionLink("Laatste stand", "Details", "Competition", new { @class = "btn btn-default btn-sm" })</p>
+            <p>@Html.ActionLink("Laatste stand", "Table", "Statistics", new { }, new { @class = "btn btn-default btn-sm" })</p>
         }
         else
         {
