--- a/WebsiteCKC/Views/Shared/_Layout.cshtml
+++ b/WebsiteCKC/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/Jasny");
-
+    <script src="~/Scripts/scripts.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
