Edited the tables for exact points

--- a/WebsiteCKC/Views/Admin/ControlPanel.cshtml
+++ b/WebsiteCKC/Views/Admin/ControlPanel.cshtml
@@ -15,7 +15,7 @@
         }
         else
         {
-            <h4 class="green"><span class="glyphicon glyphicon-remove"></span>@Html.ActionLink(" Competition", "Competition", "Admin", new { }, new { @class = "green" })</h4>
+            <h4 class="green"><span class="glyphicon glyphicon-ok"></span>@Html.ActionLink(" Competition", "Competition", "Admin", new { }, new { @class = "green" })</h4>
         }
         @if (ViewData["ConfigTeams"] == null)
         {
