--- a/WebsiteCKC/Views/Shared/_Layout.cshtml
+++ b/WebsiteCKC/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             Actions <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Vul database", "FeedDatabase", "Home")</li>
+                            <li>@Html.ActionLink("Leeg database", "EmptyDatabase", "Home")</li>
                         </ul>
                     </li>
                 </ul>
