--- a/WebsiteCKC/Views/Home/Index.cshtml
+++ b/WebsiteCKC/Views/Home/Index.cshtml
@@ -1,35 +1,16 @@
 ﻿@{
     ViewBag.Title = "Home";
 }
-
-<div class="page-header">
-    <h1>Welkom op de webpagina van CKC 5</h1>
-</div>
 <div class="row">
     <div class="col-lg-9">
         <div class="row">
-            <div class="col-md-11" style="border-bottom: 1px solid #eee">
+            <div class="col-md-12" style="border-bottom: 1px solid #eee">
                 <h2>Laatste nieuws</h2>
-                <p class="news-item">
-                    <span class=" text-info">22-04-2014</span> - CKC versterkt zich met keeper.
-                    @Html.ActionLink("Lees meer!", "Latest", "News")
-                </p>
-                <p class="news-item">
-                    <span class=" text-info">22-04-2014</span> - CKC versterkt zich met keeper.
-                    @Html.ActionLink("Lees meer!", "Latest", "News")
-                </p>
-                <p class="news-item">
-                    <span class=" text-info">22-04-2014</span> - CKC versterkt zich met keeper.
-                    @Html.ActionLink("Lees meer!", "Latest", "News")
-                </p>
-                <p>@Html.ActionLink("Laatste nieuws", "Latest", "News", new { @class = "btn btn-default btn-sm" })</p>
+                @Html.Partial("_LatestNews")
             </div>
             <div class="col-md-6">
                 <h2>Laatste wedstrijd</h2>
-                <p class="text-success">14-03-2014</p>
-                <p>vvCKC 5 - SVS 4</p>
-                <p>Uitslag: 1 - 3</p>
-                <p>@Html.ActionLink("Toon gegevens", "Details", "Match", new { @class = "btn btn-default btn-sm" })</p>
+                @Html.Partial("_LastPlayedMatch")
             </div>
         </div>
     </div>
