--- a/WebsiteCKC/Views/Shared/_LatestResults.cshtml
+++ b/WebsiteCKC/Views/Shared/_LatestResults.cshtml
@@ -1,38 +1,35 @@
-﻿<table class="table table-hover">
-    <thead>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody data-link="row" class="rowlink">
-        <tr>
-            <td>04-05-2014</td>
-            <td><a href="#">CKC 5</a></td>
-            <td><strong>1</strong></td>
-            <td>-</td>
-            <td><strong>3</strong></td>
-            <td>SVS 4</td>
-        </tr>
-        <tr>
-            <td>04-05-2014</td>
-            <td><a href="#">CVV-Mercurius 1</a></td>
-            <td><strong>1</strong></td>
-            <td>-</td>
-            <td><strong>3</strong></td>
-            <td>Antibarbari 11</td>
-        </tr>
-        <tr>
-            <td>04-05-2014</td>
-            <td><a href="#">Sparta (AV)</a></td>
-            <td><strong>7</strong></td>
-            <td>-</td>
-            <td><strong>2</strong></td>
-            <td>Pretoria 4</td>
-        </tr>
-    </tbody>
-</table>
+﻿@model WebsiteCKC.Models.MatchResult
+
+    @if (ViewData["Results"] != null)
+    {
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody data-link="row" class="rowlink">
+                @foreach (var result in ViewData["Results"] as List<WebsiteCKC.Models.MatchResult>)
+                {
+                    <tr>
+                        <td>@result.MatchPlayed.Date</td>
+                        <td><a href="#">@result.HomeTeamName</a></td>
+                        <td><strong>@result.HomeTeamScored</strong></td>
+                        <td>-</td>
+                        <td><strong>@result.AwayTeamScored</strong></td>
+                        <td>@result.AwayTeamName</td>
+                    </tr>
+                }  
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p> No matches found.</p>
+    }
+
