--- a/WebsiteCKC/Views/Statistics/Table.cshtml
+++ b/WebsiteCKC/Views/Statistics/Table.cshtml
@@ -16,7 +16,7 @@
     }
     <div class="col-md-5">
         <h3>Last results</h3>
-        @*@Html.Partial("_LatestResults")*@
+        @Html.Partial("_LatestResults")
     </div>
     <div class="col-lg-7" style="border-left: 1px solid #eee">
         
